<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlack"
        android:alpha=".5"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/transparent">

            <ImageView
                android:id="@+id/register_btnBack"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/md_white_1000"
                android:background="@drawable/ic_back"
                android:padding="8dp" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/register_imgLogo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:background="@mipmap/ic_launcher_round"
                android:layout_marginTop="90dp"
                app:riv_corner_radius="30dip"
                app:riv_border_width="2dip"
                app:riv_border_color="#333333"
                app:riv_mutate_background="true"
                app:riv_oval="true" />

            <EditText
                android:id="@+id/register_editNameSurname"
                android:layout_below="@id/register_imgLogo"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edit_transparent_bg"
                android:layout_marginTop="48dp"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/name_surname"
                android:padding="8dp"
                android:textSize="16sp"
                android:textColorHint="@color/md_white_1000"
                android:textColor="@color/colorWhite"
                android:layout_marginRight="@dimen/unit_16_dp"
                android:layout_marginLeft="@dimen/unit_16_dp" />

            <EditText
                android:layout_below="@id/register_editNameSurname"
                android:id="@+id/register_editEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edit_transparent_bg"
                android:layout_marginTop="16dp"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:fontFamily="@font/ubuntu_regular"
                android:padding="8dp"
                android:textSize="16sp"
                android:textColorHint="@color/md_white_1000"
                android:textColor="@color/colorWhite"
                android:layout_marginRight="@dimen/unit_16_dp"
                android:layout_marginLeft="@dimen/unit_16_dp" />

            <EditText
                android:layout_below="@id/register_editEmail"
                android:id="@+id/register_editPassword"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_transparent_bg"
                android:layout_marginRight="@dimen/unit_16_dp"
                android:layout_marginLeft="@dimen/unit_16_dp"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:hint="@string/password"
                android:fontFamily="@font/ubuntu_regular"
                android:padding="8dp"
                android:textSize="16sp"
                android:textColorHint="@color/md_white_1000"
                android:textColor="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="48dp" />

            <EditText
                android:layout_below="@id/register_editPassword"
                android:id="@+id/register_editPasswordRepeat"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_transparent_bg"
                android:layout_marginRight="@dimen/unit_16_dp"
                android:layout_marginLeft="@dimen/unit_16_dp"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/password_repeat"
                android:padding="8dp"
                android:textSize="16sp"
                android:textColorHint="@color/md_white_1000"
                android:textColor="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="48dp" />

            <Button
                android:layout_below="@id/register_editPasswordRepeat"
                android:id="@+id/register_btnRegister"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="@dimen/unit_16_dp"
                android:layout_marginRight="@dimen/unit_16_dp"
                android:layout_marginBottom="16dp"
                android:textAllCaps="false"
                android:background="@drawable/login_button_bg"
                android:fontFamily="@font/ubuntu_regular"
                android:text="@string/register"
                android:textColor="@android:color/white" />

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>